<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_random_description">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_wolox_phone">0800 123 4567</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="view_pager_title">Username: %1$s\nFavourite color: %2$s</string>
    <string name="random_toolbar_title">Random number example</string>
    <string name="request_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_favourite_color">Your favourite color</string>
    <string name="fragment_example_login">Login</string>
    <string name="fragment_request_search">Search</string>
    <string name="fragment_request_post_id">Post id</string>
    <string name="fragment_request_invalid_input">Invalid input, please enter a valid id.</string>
    <string name="first_name_recomended">First Name (recommended)</string>
    <string name="last_name_recomended">Last Name (recommended)</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_conditions">By joining you agree to our <u>Terms &amp; Conditions</u> </string>
    <string name="fields_requerided">All fields are requerided</string>
    <string name="username_requerided">Username is requerided</string>
    <string name="passwrod_requerided">Password is requerided</string>
    <string name="incorrect_format_email">Incorrect format for Email</string>
    <string name="test_color_blue">Blue</string>
    <string name="success">Success</string>
    <string name="signup_fragment">SignUp Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <!--    <string name="app_name">Training</string>-->

</resources>